# LLMs_Agents_Evals

./: .yamllint  CHAINS_TEST_IMPROVEMENTS.md  CONCIERGE_EVAL_REPORT.md  FEWSHOTS_ENRICHMENT_SUMMARY.md  FINAL_COMPREHENSIVE_REPORT.md  FINAL_VERIFICATION_REPORT.md  FIXES_APPLIED.md  PRODUCTION_READY_REPORT.md  QUALIFIER_IMPROVEMENTS_SUMMARY.md  QUALIFIER_PROMPT_REVIEW.md  QUALIFIER_SYSTEM_COMPLETE.md  checkpoints.sqlite  checkpoints.sqlite-shm  checkpoints.sqlite-wal  checkpoints_test.sqlite  checkpoints_test.sqlite-shm  checkpoints_test.sqlite-wal  consistency_test_0.sqlite  consistency_test_1.sqlite  consistency_test_2.sqlite  consistency_test_run_0.sqlite  consistency_test_run_1.sqlite  consistency_test_run_2.sqlite  debug_detailed.sqlite  debug_maria.sqlite  debug_maria_robert.py  debug_robert.sqlite  handoff_test_jake_-_recent_grad.sqlite  handoff_test_maria_-_career_changer.sqlite  handoff_test_robert_-_experienced.sqlite  in-memory  natural_responses_test.sqlite  naturalness_test.sqlite  pyproject.toml  quality_job_fair_request.sqlite  quality_specific_job_search.sqlite  receptionist_direct.sqlite  robustness_complete_profile_in_one_message.sqlite  robustness_immediate_job_request_(no_profile).sqlite  robustness_multiple_requests_after_profile.sqlite  (+19 more)
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
AWARE/agent-evals/: README.md  planner_executor_graph.py
AWARE/agentevals/: eval_receptionist.py
AWARE/ragas/: planner_executor_graph.py  router_graph.py  subgraph_evals.py
docs/agent-evals/: AWARE.md  AWARE_part2.md
docs/ragas/: metrics.md  run_all_examples.sh
docs/ragas copy/: metrics.md
docs/ragas copy/examples/: agent_goal_accuracy_ref.py  context_entity_recall.py  exact_match.py  noise_sensitivity.py  response_groundedness.py  rouge_score_example.py  rubrics_score.py  run_all_examples.sh  semantic_similarity.py
docs/ragas/basics/: example.py
docs/ragas/examples/: agent_goal_accuracy_noref.py  answer_accuracy.py  aspect_critic.py  bleu_score.py  context_precision_llm.py  context_precision_nonllm.py  context_recall_llm.py  context_recall_nonllm.py  context_relevance.py  factual_correctness.py  faithfulness.py  non_llm_string_similarity.py  response_relevancy.py  string_presence.py  tool_call_accuracy.py  topic_adherence.py
langgraph_server/: README.md  __init__.py  concierge.json  graph.py  langgraph.json  launch.sh  planner_executor.json  rag.json  react.json  reasoner.json  receptionist.json  router.json
langraph_server/: README.md  __init__.py  env.example  langgraph.json  launch.sh  pyproject.toml
src/: __init__.py  utils.py
src/graphs/: concierge_eval.py  concierge_workflow.py
src/graphs/ReAct_subgraph/: chains.py  lgraph_builder.py  nodes_logic.py  schemas.py
src/graphs/followup_node/: chains.py  nodes_logic.py  schemas.py
src/graphs/llm_chains_factory/: assembling.py  dynamic_fewshots.py  test_fewshots.yml
src/graphs/planner_executor_subgraph/: chains.py  config.py  fewshots.yml  lgraph_builder.py  nodes_logic.py  schemas.py  system_prompt.yml
src/graphs/qualifier/: chains.py  lgraph_builder.py  nodes_logic.py  schemas.py
src/graphs/rag_subgraph/: lgraph_builder.py  nodes_logic.py
tests/: README.md  test_planner_executor_nodes.py  test_qualifier_helpers.py  test_qualifier_nodes.py  test_receptionist_langsmith.py
vectorstores/: qdrant_async_hybrid_examples.py  qdrant_retrievers.py
(+48 files in other folders)
