
[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "langraph-server"
version = "0.1.0"
description = "LangGraph server for BuildWithin Evals"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.6.6",
    "langserve>=0.3.0",
    "langchain-openai>=0.3.30",
    "pyyaml>=6.0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = ["."]
